tests/cases/modules/ok/module-use-alias-prefix.ari
mod VeryLongModuleName {
  pub fn value() -> i64 {
    return 8;
  }
}

use VeryLongModuleName as Short

fn main() -> i64 {
  return Short::value();
}
